# utility-patent-reviewer

./: .gitattributes  .gitignore  .mcp.json.template  .typos.toml  ADVANCED-README.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  install.py  package.json  pyproject.toml  requirements.txt
.claude/commands/: create-patent.md  full-review.md  review-claims.md  review-formalities.md  review-specification.md
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  labels.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: lint.yml  release.yml  security-scan.yml  test.yml
docs/: GITHUB_QUICK_START.md  GITHUB_SETUP.md  GPU_SETUP.md  PATENTSVIEW_API_SETUP.md  PATENTSVIEW_DATA_ACCESS.md  PATENTSVIEW_SEARCH_API.md  USPTO_API_SETUP.md
docs/skills/patent-search/: patent_search.py
mcp_server/: __init__.py  analyzer_base.py  base_index.py  claims_analyzer.py  cli.py  diagram_generator.py  downloaders.py  evaluation.py  formalities_checker.py  graphviz_installer.py  health_check.py  hyde.py  patent_corpus.py  patent_index.py  path_utils.py  requirements-optional.txt  requirements.txt  server.py  specification_analyzer.py  uspto_api.py
scripts/: auto_setup.py  extract_zips.py  install_graphviz.py  test_copy_claude_config.py  test_embedding_speed.py  test_gpu_index.py  test_install.py  test_uspto_odp_api.py
